--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="m100 container">
         <nav>
             <ul>
                 <li><a href=""></a></li>
@@ -17,23 +17,12 @@
             </ul>
         </nav>
     </header>
-    <section class="hero">
+    <div class="hero mt100 container">
+        <div>
+            <h1>Bla bla bla</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos reprehenderit provident a ipsum, hic enim recusandae fuga voluptates repellendus, cumque tenetur ab iusto voluptate voluptatibus, aperiam magnam fugit unde minus!</p>
+        </div>
+    </div>
 
-    </section>
-    <section>
-
-    </section>
-    <section>
-
-    </section>
-    <section>
-
-    </section>
-    <section>
-
-    </section>
-    <footer>
-        
-    </footer>
 </body>
 </html>
