--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </address>
         </div></div>
         
-        <p class="texte-center mt32">Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</p>
+        <p class="text-center mt32">Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</p>
     </footer>
 
     <!-- Modal : formulaire de demande de devis -->
