--- a/index.html
+++ b/index.html
@@ -196,6 +196,12 @@
         <div class="flex gap64"><div class="w30">
             <img src="./assets/Logo.png" alt="" class="logo">
             <p>Prêt à tout changer ? Contactez-nous dès aujourd'hui pour planifier un rendez-vous !</p>
+            <div class="flex gap32 reseaux mt16">
+                <img src="./assets/facebook.png" alt="">
+                <img src="./assets/insta.png" alt="">
+                <img src="./assets/linkedin.png" alt="">
+                <img src="./assets/twitter.png" alt="">
+            </div>
         </div>
         <div class="w30">
             <h3>Contact</h3>
