ajout croix et btn tel

--- a/index.html
+++ b/index.html
@@ -53,13 +53,15 @@
         <div class="w45">
             <h2>Nous créons l'art De la vie élégante</h2>
             <p class="mt32">Transformez votre maison en un espace élégant et fonctionnel avec nos services de design résidentiel sur mesure.</p>
-            <div class="flex gap16 mt32">
-                <div class="logo-tel"></div>
-                <div class="">
-                    <a href="tel:+012345678">012345678</a>
+            <a href="tel:012345678" class="flex gap16 mt32">
+                <div class="picto-tel flex justify-center align-center">
+                    <img src="./assets/Call.png" alt="">
+                </div>
+                <div>
+                    <p>012345678</p>
                     <p>apellez nous n'importe quand</p>
                 </div>
-            </div>
+            </a>
             <a href="" id="openbtn" class="btn mt32">Obtenez un devis gratuit</a>
         </div>
         <div class="w45">
@@ -219,8 +221,7 @@
     <!-- Modal : formulaire de demande de devis -->
     <div class="mask display-none"></div>
     <div class="modal display-none">
-        <div class="close-modal">
-            
+        <div class="close-modal">         
         </div>
         <h2>Mon devis gratuit</h2>
         <p>Remplissez le formualire ci dessous , décrivez votre projet nous vous contacterons dans les plus brefs délais</p>
